# flask-praetorian-tutorial

./: docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/src/: app_factory.py  extensions.py  preset_users.py  resources.py  users.py  utilities.py
docs/: mkdocs.yml  pyproject.toml
docs/src/: basic.md  index.md  setup.md
ui/: Dockerfile-dev  README.md  angular.json  package-lock.json  package.json  tsconfig.json
ui/src/: index.html  styles.scss
ui/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  backend.service.spec.ts  backend.service.ts  endpoint-service.ts  messages.service.ts  section-name.service.spec.ts  section-name.service.ts  todo.txt  users.service.ts
ui/src/app/guards/: fake-email.guard.ts
ui/src/app/models/: endpoint.model.ts  message.model.ts  preset-user.model.ts  request.model.ts  response.model.ts  user.model.ts
ui/src/app/roles/: roles.component.html  roles.component.ts
ui/src/app/section-nav/: section-nav.component.html  section-nav.component.scss  section-nav.component.spec.ts  section-nav.component.ts
ui/src/app/sections/blacklist/: blacklist.component.html  blacklist.component.ts
ui/src/app/sections/custom-claims/: custom-claims.component.html  custom-claims.component.scss  custom-claims.component.spec.ts  custom-claims.component.ts
ui/src/app/sections/home/: home.component.html
ui/src/app/sections/refresh/: refresh.component.html  refresh.component.ts
ui/src/app/services/: api.service.ts  messages.service.ts  token-interceptor.service.ts
ui/src/app/shared/: shared.module.ts
(+68 files in other folders)
