[tool.poetry]
name = "flask-praetorian-tutorial"
version = "0.1.0"
description = ""
authors = ["Tucker Beck <tucker.beck@officeally.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask-cors = "^3.0"
flask-sqlalchemy = "^2.4"
pendulum = "^2.0"
# flask-praetorian = {version = "1.1.0a3", allow-prereleases = true}
flask-praetorian = { file = "/flask-praetorian-1.1.0a3.tar.gz" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
