[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^6.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
